crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaStatus_Ok = 0,
  PamojaStatus_Transport = 1,
  PamojaStatus_Io = 2,
  PamojaStatus_Codec = 3,
  PamojaStatus_Closed = 4,
  PamojaStatus_Unsupported = 5,
  PamojaStatus_InvalidArgument = 6,
  PamojaStatus_Other = 7,
  PamojaStatus_Panic = 8,
  PamojaStatus_Auth = 9,
} PamojaStatus;
typedef enum {
  PamojaStepDrive_Wave = 0,
  PamojaStepDrive_FullStep = 1,
  PamojaStepDrive_HalfStep = 2,
} PamojaStepDrive;
typedef enum {
  PamojaStepDirection_Forward = 0,
  PamojaStepDirection_Backward = 1,
} PamojaStepDirection;
typedef struct PamojaBme280Calibration PamojaBme280Calibration;
typedef struct PamojaStepper PamojaStepper;
typedef struct {
  uint8_t on_low;
  uint8_t on_high;
  uint8_t off_low;
  uint8_t off_high;
} PamojaPwm;
typedef struct {
  float celsius;
  uint32_t pascals;
  float hectopascals;
  float relative_humidity_percent;
} PamojaBme280Measurement;
typedef struct {
  int16_t raw_temperature;
  int32_t micro_celsius;
  int8_t alarm_high;
  int8_t alarm_low;
  uint8_t resolution_bits;
} PamojaDs18b20Reading;
typedef struct {
  uint8_t start_conversion;
  uint8_t mux;
  uint8_t pga;
  uint8_t single_shot;
  uint8_t data_rate;
  uint8_t window_comparator;
  uint8_t comparator_active_high;
  uint8_t comparator_latching;
  uint8_t comparator_queue;
} PamojaAds1115Config;
PamojaStatus pamoja_pca9685_channel_register(uint8_t channel, uint8_t *out_register);
uint8_t pamoja_pca9685_prescale_for_frequency(uint32_t update_rate_hz, uint32_t osc_hz);
float pamoja_pca9685_frequency_for_prescale(uint8_t prescale, uint32_t osc_hz);
PamojaPwm pamoja_pwm_from_counts(uint16_t on, uint16_t off);
PamojaPwm pamoja_pwm_duty(uint16_t off);
PamojaPwm pamoja_pwm_servo(uint32_t pulse_micros, uint32_t update_rate_hz);
PamojaPwm pamoja_pwm_full_on(void);
PamojaPwm pamoja_pwm_full_off(void);
PamojaStepper *pamoja_stepper_new(PamojaStepDrive drive);
uint8_t pamoja_stepper_step(PamojaStepper *stepper, PamojaStepDirection direction);
uint8_t pamoja_stepper_coils(const PamojaStepper *stepper);
int32_t pamoja_stepper_steps(const PamojaStepper *stepper);
uintptr_t pamoja_stepper_step_count(PamojaStepDrive drive);
PamojaStatus pamoja_bme280_calibration_new(const uint8_t *temp_press,
                                           uintptr_t temp_press_len,
                                           const uint8_t *humidity,
                                           uintptr_t humidity_len,
                                           PamojaBme280Calibration **out_calibration);
PamojaStatus pamoja_bme280_compensate(const PamojaBme280Calibration *calibration,
                                      const uint8_t *measurement,
                                      uintptr_t measurement_len,
                                      PamojaBme280Measurement *out_measurement);
void pamoja_bme280_calibration_free(PamojaBme280Calibration *calibration);
PamojaStatus pamoja_ds18b20_parse_scratchpad(const uint8_t *bytes,
                                             uintptr_t bytes_len,
                                             PamojaDs18b20Reading *out_reading);
PamojaStatus pamoja_ds18b20_build_scratchpad(float celsius,
                                             uint8_t bits,
                                             int8_t alarm_high,
                                             int8_t alarm_low,
                                             uint8_t *out_bytes);
uint8_t pamoja_ds18b20_crc8(const uint8_t *data, uintptr_t data_len);
int32_t pamoja_ds18b20_micro_celsius(int16_t raw);
float pamoja_ds18b20_celsius(int16_t raw);
PamojaStatus pamoja_ds18b20_config_byte(uint8_t bits, uint8_t *out_byte);
uint8_t pamoja_ds18b20_resolution_bits(uint8_t config_byte);
PamojaStatus pamoja_ds18b20_step_micro_celsius(uint8_t bits, uint32_t *out_micro_celsius);
PamojaStatus pamoja_ds18b20_max_conversion_micros(uint8_t bits, uint32_t *out_micros);
uint16_t pamoja_ina219_calibration(uint32_t current_lsb_microamps, uint32_t shunt_milliohms);
uint32_t pamoja_ina219_minimum_current_lsb_microamps(uint32_t max_expected_microamps);
int16_t pamoja_ina219_shunt_register(int32_t microvolts);
uint16_t pamoja_ina219_bus_register(uint32_t millivolts);
int16_t pamoja_ina219_current_register(int32_t microamps, uint32_t current_lsb_microamps);
uint16_t pamoja_ina219_power_register(uint32_t microwatts, uint32_t current_lsb_microamps);
int32_t pamoja_ina219_shunt_microvolts(int16_t raw);
uint32_t pamoja_ina219_bus_millivolts(uint16_t raw);
bool pamoja_ina219_conversion_ready(uint16_t raw);
bool pamoja_ina219_math_overflow(uint16_t raw);
int32_t pamoja_ina219_current_microamps(int16_t raw, uint32_t current_lsb_microamps);
uint32_t pamoja_ina219_power_microwatts(uint16_t raw, uint32_t current_lsb_microamps);
uint16_t pamoja_ads1115_config_bits(PamojaAds1115Config config);
PamojaStatus pamoja_ads1115_config_from_bits(uint16_t bits, PamojaAds1115Config *out_config);
uint32_t pamoja_ads1115_full_scale_microvolts(uint8_t pga);
uint16_t pamoja_ads1115_samples_per_second(uint8_t data_rate);
int64_t pamoja_ads1115_to_nanovolts(uint8_t pga, int16_t raw);
float pamoja_ads1115_to_volts(uint8_t pga, int16_t raw);